apps/printquick/envs/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: "*.printquick.staging.rizexor.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc
                port:
                  number: 80
  tls:
    - secretName: staging-rizexor-com-tls
